objects/dbu_Manage_Chat__c.object
<CustomObject>
    <fields>
        <fullName>dbu_Day_Of_The_Week__c</fullName>
        <label>Day Of The Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_Disable_Chat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Disable_End_Time__c</fullName>
        <label>dbu_Disable End Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Disable_Start_Time__c</fullName>
        <label>dbu_Disable Start Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_End_Time__c</fullName>
        <label>dbu EndTime</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_StartTime__c</fullName>
        <label>dbu StartTime</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Store_Name__c</fullName>
        <label>Store Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Canda English</fullName>
                </value>
                <value>
                    <fullName>Canada French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America/New_York</fullName>
                    <default>true</default>
                    <label>EST</label>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>MDT</fullName>
                    <isActive>false</isActive>
                    <label>MDT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>dbu Manage Chat</label>
    <listViews>
        <fullName>Dbu_manage_Chats</fullName>
        <columns>NAME</columns>
        <columns>dbu_Day_Of_The_Week__c</columns>
        <columns>dbu_Disable_Chat__c</columns>
        <columns>dbu_Store_Name__c</columns>
        <columns>dbu_StartTime__c</columns>
        <columns>dbu_End_Time__c</columns>
        <columns>dbu_Time_Zone__c</columns>
        <filterScope>Everything</filterScope>
        <label>Dbu Manage Chats</label>
        <sharedTo>
            <group>All_Users</group>
            <group>DBU_ECommerce</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>dbu Manage Chat Times Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>dbu Manage Chats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>